src/test/test-models/bad/reserved/wchar_t.stan
data {
  real wchar_t;
}
model {
}
